fixing overflow

--- a/scss/_layout.wrapper.scss
+++ b/scss/_layout.wrapper.scss
@@ -16,6 +16,7 @@
     margin: 0 auto;
     position: relative;
     background: rgba($white, .4);
+    overflow-x: hidden;
 
     &:after {
       content: '';
